--- a/Reference_Jupyter_Notebook.ipynb
+++ b/Reference_Jupyter_Notebook.ipynb
@@ -2772,7 +2772,7 @@
     {
      "data": {
       "text/plain": [
-       "0.39519858025430554"
+       "0.3993170202677652"
       ]
      },
      "execution_count": 32,
@@ -2914,7 +2914,7 @@
     {
      "data": {
       "text/plain": [
-       "0.3938240296008143"
+       "0.3928372459793323"
       ]
      },
      "execution_count": 36,
@@ -2952,13 +2952,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.41113964130501196\n"
+      "0.417789480243495\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'max_depth': 15, 'max_features': 0.8, 'min_samples_split': 2}"
+       "{'max_depth': 10, 'max_features': 0.9, 'min_samples_split': 6}"
       ]
      },
      "execution_count": 38,
@@ -3005,7 +3005,7 @@
     {
      "data": {
       "text/plain": [
-       "0.4057412102261252"
+       "0.40600443353937826"
       ]
      },
      "execution_count": 40,
@@ -3064,7 +3064,7 @@
     {
      "data": {
       "text/plain": [
-       "0.528484643218638"
+       "0.5268679139585187"
       ]
      },
      "execution_count": 43,
@@ -3128,23 +3128,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Store the final results in csv file \n",
-    "\n",
     "test_target = pd.DataFrame({'ID':test_data['ID'], 'Loan/No Loan':test_predict})\n",
     "test_target.to_csv('Submission 4.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5401922998039442\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'colsample_bytree': 1,\n",
+       " 'learning_rate': 0.1,\n",
+       " 'scale_pos_weight': 3,\n",
+       " 'subsample': 0.7}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# GridSearchCV Optimization for XGBoost model\n",
     "\n",
     "strat_kf = StratifiedKFold(n_splits = 3, shuffle=True)\n",
     "\n",
-    "params = {'learning_rate': [0.01, 0.1, 0.3, 0.5, 1],\n",
+    "params = {'learning_rate': [0.1],\n",
     "          'subsample': [0.6,0.7,0.8,0.9,1],\n",
     "          'colsample_bytree': [0.6,0.7,0.8,0.9,1],\n",
     "          'scale_pos_weight': [1,2,3,4,5]}\n",
@@ -3157,19 +3176,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5386998361815377"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test_predict = grid.best_estimator_.predict(test_features)"
+    "# {'colsample_bytree': 1, 'learning_rate': 0.1,  'scale_pos_weight': 3, 'subsample': 0.7}\n",
+    "\n",
+    "xgb_best = grid.best_estimator_\n",
+    "f1_scores = cross_val_score(xgb_best, train_features, train_target, scoring='f1', cv=strat_kf)\n",
+    "f1_scores.mean()\n",
+    "\n",
+    "# Increase in f1 score after fine-tuning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_predict = grid.best_estimator_.predict(test_features)\n",
+    "\n",
+    "# Store the final results in csv file \n",
+    "\n",
     "test_target = pd.DataFrame({'ID':test_data['ID'], 'Loan/No Loan':test_predict})\n",
     "test_target.to_csv('Submission 5.csv', index=False)"
    ]
